--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.15.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "prisma": "^6.15.0",
     "zod": "^4.1.3"
   },
   "devDependencies": {
