--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,24 +3,25 @@
   "private": true,
   "type": "module",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/index.ts",
   "exports": {
-    ".": "./src/Button.tsx"
+    ".": "./src/index.ts"
   },
   "peerDependencies": {
-    "react": ">=18 <20",
-    "react-dom": ">=18 <20"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev": "tsc --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/react": "^19.1.11",
-    "@types/react-dom": "^19.1.8",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "typescript": "^5.9.2"
   }
 }
