--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -11,9 +11,15 @@
   },
   "dependencies": {
     "@blog/ui": "^1.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
     "@tailwindcss/vite": "^4.1.12",
+    "@toolpad/core": "^0.16.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
