--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm run -w @blog/api dev & npm run -w @blog/user dev & npm run -w @blog/admin dev",
+    "dev": "npm run -w @blog/api dev & npm run -w @blog/user dev",
     "build": "npm run -w @blog/api build && npm run -w @blog/user build && npm run -w @blog/admin build",
     "start": "npm run -w @blog/api start"
   },
@@ -19,6 +19,11 @@
     "node": ">=20"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
+    "@toolpad/core": "^0.16.0",
     "cors": "^2.8.5"
   },
   "devDependencies": {
