--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -9,8 +9,9 @@
     "outDir": "dist",
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "nodenext",
-    "target": "es2022",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "target": "ES2022",
   "types": ["node"],
     // For nodejs:
     // "lib": ["esnext"],
@@ -35,8 +36,9 @@
   "isolatedModules": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
-  "esModuleInterop": true
+  "esModuleInterop": true,
+  "allowSyntheticDefaultImports": true
   },
  "include": ["src/**/*.ts"],           // ✅ only compile files under src
-  "exclude": ["dist", "node_modules"]   // ✅ ignore build output and deps
+  "exclude": ["dist", "node_modules", "src/generated"]   // ✅ ignore build output and deps
 }
