--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "apps/*"
   ],
   "version": "1.0.0",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm run -w @blog/api dev & npm run -w @blog/user dev",
-    "build": "npm run -w @blog/api build && npm run -w @blog/user build && npm run -w @blog/admin build",
-    "start": "npm run -w @blog/api start"
-  },
+"scripts": {
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "dev": "concurrently \"npm run -w @blog/api dev\" \"npm run -w @blog/user dev\"",
+  "build": "npm run -w @blog/api build && npm run -w @blog/user build && npm run -w @blog/admin build",
+  "start": "npm run -w @blog/api start"
+},
   "author": "panwilku",
   "license": "ISC",
   "description": "",
@@ -27,6 +27,7 @@
     "cors": "^2.8.5"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19"
+    "@types/cors": "^2.8.19",
+    "concurrently": "^9.2.1"
   }
 }
