--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,6 +27,7 @@
     "zod": "^4.1.3"
   },
   "devDependencies": {
+    "@blog/api-types": "^1.0.0",
     "@blog/tsconfig": "^1.0.0",
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
