--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@blog/api-types": "^1.0.0",
     "@blog/ui": "^1.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
