--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@blog/ui": "^1.0.0",
+    "@tailwindcss/cli": "^4.1.13",
+    "dotenv": "^17.2.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@blog/tsconfig": "^1.0.0",
