--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,8 +5,10 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "build": "tsc && npx prisma generate",
+    "start": "node dist/index.js",
+    "postinstall": "npx prisma generate",
+    "deploy": "npx prisma migrate deploy && npm start"
   },
   "keywords": [],
   "author": "",
