--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,32 +10,28 @@
     "postinstall": "npx prisma generate",
     "deploy": "npx prisma migrate deploy && npm start"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@prisma/client": "^6.15.0",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
+    "@types/node": "^24.5.1",
+    "@types/bcrypt": "^6.0.0",
+    "@types/express": "^5.0.3",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.15.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "typescript": "^5.9.2",
     "zod": "^4.1.3"
   },
   "devDependencies": {
     "@blog/api-types": "^1.0.0",
     "@blog/tsconfig": "^1.0.0",
-    "@types/bcrypt": "^6.0.0",
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.5.1",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "ts-node-dev": "^2.0.0",
-    "tsx": "^4.20.5",
-    "typescript": "^5.9.2"
+    "tsx": "^4.20.5"
   }
 }
