--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc && npx prisma generate",
+    "build": "rm -rf dist && tsc && npx prisma generate",
     "start": "node dist/index.js",
     "postinstall": "npx prisma generate",
     "deploy": "npx prisma migrate deploy && npm start"
