--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,32 +5,32 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "rm -rf dist && tsc && npx prisma generate",
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc && npx prisma generate",
     "start": "node dist/index.js",
     "postinstall": "npx prisma generate",
     "deploy": "npx prisma migrate deploy && npm start"
   },
   "dependencies": {
     "@prisma/client": "^6.15.0",
-    "@types/node": "^24.5.1",
     "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.5",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/node": "^24.5.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.15.0",
+    "rimraf": "^5.0.10",
     "typescript": "^5.9.2",
     "zod": "^4.1.3"
   },
   "devDependencies": {
     "@blog/api-types": "^1.0.0",
     "@blog/tsconfig": "^1.0.0",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.5"
   }
