--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "clean": "rimraf dist",
-    "build": "npm run clean && tsc && npx prisma generate",
+    "build": "npm run clean && npx prisma generate && tsc",
     "start": "node dist/index.js",
     "postinstall": "npx prisma generate",
     "deploy": "npx prisma migrate deploy && npm start"
