--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,8 +5,8 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "clean": "rimraf dist",
-    "build": "npm run clean && npx prisma generate && tsc",
+    "clean": "rimraf dist src/generated",
+    "build": "npm run clean && npx prisma generate && tsc && cp -r src/generated dist/ || xcopy src\\generated dist\\generated /E /I",
     "start": "node dist/index.js",
     "postinstall": "npx prisma generate",
     "deploy": "npx prisma migrate deploy && npm start"
@@ -24,13 +24,12 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.15.0",
-    "rimraf": "^5.0.10",
-    "typescript": "^5.9.2",
     "zod": "^4.1.3"
   },
   "devDependencies": {
     "@blog/api-types": "^1.0.0",
     "@blog/tsconfig": "^1.0.0",
+    "rimraf": "^5.0.10",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.5"
   }
